--- a/Assignment3/public/style.css
+++ b/Assignment3/public/style.css
@@ -1,21 +1,69 @@
-* { margin: 0; padding: 0; box-sizing: border-box; }
+html { 
+    margin: 0; padding: 0; height: 100%; width: 100%;
+}
 body { 
-    font: 13px Helvetica, Arial; 
+    font: 13px Helvetica, Arial;
+    margin: 0; padding: 0;  height: 100%; width: 100%;
+    box-sizing: border-box; border: 20px solid #ab99ff; border-bottom: 10px solid #ab99ff;
+    position: relative;
     /* Scroll bar implementation */
-    overflow-y: scroll; direction: up; padding-bottom: 45px;
+}
+
+.chat{
+    width: 70%;
+    height: calc( 100% - 60px );
+    position: absolute;
+    padding: 0;
+    margin: 0;
+    overflow-y: scroll;
+    display: table-cell;
+    vertical-align: bottom;
+}
+
+.userform{
+    width: calc(30% - 21px); 
+    height: calc( 100% - 90px );
+    position: fixed;
+    padding: 0;
+    margin: 0;
+    overflow-y: scroll;
+    right: 20px;
+    top: 20px;
+    border-left: 10px solid #ab99ff;
+}
+
+.inputform{
+    width: 100%;
+    height: 60px;
+    margin: 0;
+    padding: 0;
+    position: absolute; bottom: 0px;
+    background: #ab99ff;
 }
 form { 
-    background: #000; padding: 3px; position: fixed; bottom: 0; width: 100%;
+    align-content: center;
 }
-form input { border: 0; padding: 10px; width: 90%; margin-right: .5%; }
-form button { width: 9%; background: rgb(130, 224, 255); border: none; padding: 10px; }
+
+form input { left: 20px; bottom: 20px; width: calc(100% - 200px); position: absolute;}
+form button { width: 9%; background: rgb(130, 224, 255); border: none; position: absolute;
+    padding: 10px; top: 12px; right: 20px;}
+
+#userlist {
+    list-style-type: none; font-family: "Lucida Console", Monaco, monospace;
+    padding: 0; margin: 0; 
+    height: 100%;
+    width: 100%;
+    position: absolute; bottom: 0px; box-sizing: border-box; 
+}
+#userlist li { padding: 5px 10px; }
 
 #messages {
-    list-style-type: none; margin: 0; font-family: "Lucida Console", Monaco, monospace;
-    /* Scroll-up text */
-    padding-bottom: 45px; position: fixed; bottom: 0; width: 100%;
+    list-style-type: none; font-family: "Lucida Console", Monaco, monospace;
+    padding: 0; margin: 0; 
+    height: 100%;
+    width: 100%;
+    position: absolute; bottom: 0px; box-sizing: border-box; 
 }
 
-#messages li { padding: 5px 10px; }
-#messages li:nth-child(odd) { background: #eee; }
-#messages italics { font-style: italic; }
+#messages li { padding: 5px 10px; word-wrap: break-word;}
+#messages li:nth-child(odd) { background: #eee; word-wrap: break-word;}
